manifests/local-management/network-debug-app/virtual-service-1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: network-debug-app-vs-1
  namespace: istio-system
spec:
  hosts:
    - "nda1.management.local"
  http:
    - route:
        - destination:
            host: network-debug-app-management-local-1-debug.networking-test.svc.cluster.local  # Check if this service name matches your Argo CD service
            port:
              number: 80
