manifests/local-management/network-debug-app/virtual-service-2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: network-debug-app-vs-2
  namespace: istio-system
spec:
  hosts:
    - "nda2.management.local"
  gateways:
    - istio-ingressgateway-management
  http:
    - route:
        - destination:
            host: network-debug-app-management-local-2-debug.networking-test.svc.cluster.local  # Check if this service name matches your Argo CD service
            port:
              number: 80
